# flask-hello-world

./: main.py  pyproject.toml  wsgi.py
templates/: index.html
